derive/tests/snapshots/direct_index/Slot/delete_slot_by_position.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    /**

Try to delete a `Slot` row in the `slot` table whose value matches the unique single-column direct index on the `position` column.*/
    pub fn delete_slot_by_position<'a>(
        &'a self,
        position: &u8,
    ) -> Result<
        crate::spacetimedsl::delete::DeletionResult,
        crate::spacetimedsl::error::SpacetimeDSLError,
    > {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        use crate::spacetimedsl::itertools::Itertools;
        let position = position;
        let row_to_delete = self.db().slot().position().find(position);
        let row_to_delete = match row_to_delete {
            None => {
                return Err(crate::spacetimedsl::error::SpacetimeDSLError::NotFoundError {
                    table_name: "slot".into(),
                    column_names_and_row_values: format!(
                        "{{ position : {} }}", & position
                    )
                        .into(),
                });
            }
            Some(row_to_delete) => row_to_delete,
        };
        let mut deletion_result_entry = crate::spacetimedsl::delete::DeletionResultEntry {
            table_name: "slot".into(),
            column_name: "id".into(),
            strategy: crate::spacetimedsl::delete::OnDeleteStrategy::Delete,
            row_value: format!("{}", SlotId::new(row_to_delete.id.clone())).into(),
            child_entries: vec![],
        };
        match self.db().slot().id().delete(&row_to_delete.id) {
            false => {
                return Err(
                    crate::spacetimedsl::error::SpacetimeDSLError::Error(
                        "Delete One Error: `count_of_rows_to_delete ( 1 ) != ( 0 ) count_of_deleted_rows`!"
                            .to_string(),
                    ),
                );
            }
            true => {}
        };
        return Ok(crate::spacetimedsl::delete::DeletionResult {
            table_name: "slot".into(),
            one_or_multiple: crate::spacetimedsl::error::OneOrMultiple::One,
            entries: vec![deletion_result_entry],
            error_from_hook: None,
        });
    }
}
