derive/tests/snapshots/direct_index/Slot/get_all_slots.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `slot` table.
    pub fn get_all_slots<'a>(&'a self) -> impl Iterator<Item = Slot> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().slot().iter()
    }
}
